[package]
name = "poker"
version = "0.1.0"
authors = ["Adam St Arnaud <ajstarna@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.22"
strum_macros = "0.22"
rand = "0.8"

actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"
serde = "1"
serde_json = "1"

uuid = { version = "0.8", features = ["v4", "serde"] }