[package]
name = "poker"
version = "0.1.0"
authors = ["Adam St Arnaud <ajstarna@ualberta.ca>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
strum = "0.22"
strum_macros = "0.22"
rand = "0.8"
uuid = { version = "0.8", features = ["v4", "serde"] }

actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0.32", features = ["derive"] }

# needed for the client
awc = "3"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
json = "0.12.4"
